--- a/_config.yml
+++ b/_config.yml
@@ -27,22 +27,12 @@ projects:
     projects:
     # - repo-name
 
-# social_media:
-  # behance: your_username
-  # dribbble: your_username
-  # facebook: your_username
-  # hackerrank: your_username
-  # instagram: your_username
-  # keybase: your_username
-  # linkedin: your_username
-  # medium: your_username
-  # stackoverflow: your_user_id
-  # telegram: your_username
-  # twitter: your_username
-  # unsplash: your_username
-  # vk: your_username
-  # website: http://your_website_url
-  # youtube: your_username
+social_media:
+  facebook: loumachisamir
+  instagram: your_username
+  linkedin: samirloumachi
+  stackoverflow: 5436126
+  website: http://samirl.com
 
 topics:
   - name: CSS
