--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ projects:
 
 social_media:
   facebook: loumachisamir
-  instagram: your_username
+  instagram: djdecktrik
   linkedin: samirloumachi
   stackoverflow: 5436126
   website: http://samirl.com
